set height on the site menu to stop overflow IE

--- a/css/src/sitemenu.css
+++ b/css/src/sitemenu.css
@@ -3,7 +3,7 @@
   position: absolute;
   min-width: 170px;
   max-width: 170px;
-  max-height: unset;
+  max-height: 268px;
   bottom: auto;
   left: auto;
   margin: 0;
